Add vmware exporter to prometheus group

--- a/group_vars/prom/prometheus.yml
+++ b/group_vars/prom/prometheus.yml
@@ -59,6 +59,20 @@ prometheus_scrape_configs_static:
         labels:
           instance: "{{ inventory_hostname }}"
 
+  - job_name: 'vmware_vcenter'
+    metrics_path: '/metrics'
+    scrape_interval: 1m
+    static_configs:
+      - targets:
+          - "{{ vault_vsphere_host }}"
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: "localhost:{{ vmware_exporter_port }}"
+
   - job_name: "ipmi"
     params:
       module: ['default']
