--- a/playbooks/prom.yml
+++ b/playbooks/prom.yml
@@ -121,6 +121,9 @@
     - role: ipmi_exporter
       tags: ["ipmi_exporter"]
 
+    - role: vmware_exporter
+      tags: ["vmware_exporter"]
+
     - role: grafana
       tags: ["grafana"]
 
