--- a/playbooks/pg.yml
+++ b/playbooks/pg.yml
@@ -43,6 +43,9 @@
     - role: timescaledb
       tags: ["timescaledb"]
 
+    - role: promscale_extension
+      tags: ["promscale"]
+
     - role: postgres_exporter
       vars:
         postgres_service_name: "{{ postgresql_daemon }}"
