--- a/group_vars/prom/prometheus.yml
+++ b/group_vars/prom/prometheus.yml
@@ -13,6 +13,8 @@ prometheus_global:
   scrape_interval: 15s
   scrape_timeout: 10s
   evaluation_interval: 15s
+prometheus_remote_write:
+  - url: "http://127.0.0.1:9201/write"
 prometheus_alertmanager_config:
   - scheme: http
     static_configs:
