--- a/roles/sbctl/defaults/main.yml
+++ b/roles/sbctl/defaults/main.yml
@@ -1,6 +1,9 @@
 ---
 
 esp_mount: "/boot"
+esp_disk: "/dev/nvme0n1"
+esp_part: "1"
+
 boot_mount: "{{ esp_mount }}"
 sbctl_ucode: "intel-ucode.img"
 sbctl_cmdline: "/usr/share/secureboot/cmdline"
