--- a/roles/sbctl/defaults/main.yml
+++ b/roles/sbctl/defaults/main.yml
@@ -11,6 +11,4 @@ sbctl_enroll: true
 sbctl_enroll_microsoft: false
 sbctl_sign_files: []
 efistub_splash: "/usr/share/systemd/bootctl/splash-arch.bmp"
-sbctl_bundles:
-  - kernel: linux
-    label: "Arch Linux"
+sbctl_bundles: []
