--- a/roles/laptop/tasks/main.yml
+++ b/roles/laptop/tasks/main.yml
@@ -117,3 +117,22 @@
   when:
     - install_suspend_hooks
     - root_resume | length > 0
+
+- block:
+    - name: Copy battery charge threshold service
+      template:
+        src: battery-charge-threshold.service.j2
+        dest: /etc/systemd/system/battery-charge-threshold.service
+        owner: root
+        group: root
+        mode: 0644
+      notify: restart battery charge threshold service
+
+    - name: Enable and start battery charge threshold service
+      systemd:
+        name: battery-charge-threshold.service
+        state: started
+        enabled: true
+        daemon_reload: true
+
+  when: install_battery_charge_threshold | bool
