--- a/host_vars/laptop/vars.yml
+++ b/host_vars/laptop/vars.yml
@@ -4,6 +4,7 @@ _ports: {}
 node_exporter_web_listen_address: "0.0.0.0:{{ node_exporter_port }}"
 borg_laptop_passphrase: "{{ vault_borg_laptop_passphrase }}"
 desktop_environment: "sway"
+autorandr_install_lid_listener: true
 
 my_groups:
   - docker
